[package]
name = "baster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }

anyhow = "1"
tokio = { version = "*", features = ["full"] }

serde = { version = "1", features = ["derive"] }

# web
axum = "0.6"
axum-extra = "0.7"
tower-http = { version = "0.4", features = ["cors"] }

sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }


[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }
