[package]
name = "blave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }

anyhow = "1"
once_cell = "1"
async-recursion = "1"
parking_lot = { version = "0.12", features = ["nightly"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# util
gethostname = "0.4"


[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }
